Tue Jun 15 12:21:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* acinclude.m4 (GNUPG_SYS_NM_PARSE): Support for {net,free}bsd,

Thu Jun 10 14:18:23 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (ZLIB,GDBM): Check both, header and lib.

Sat Jun  5 15:30:33 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* pkclist.c (key_present_in_pk_list): New (Michael).

Tue May 25 19:50:32 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (IS_DEVELOPMENT_VERSION): Fixed detection.

Sun May 23 14:20:22 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): assume yes when
	cross-compiling.

Mon May 17 21:54:43 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (socket): Fix for Unisys by Katsuhiro Kondou.

Sat May  8 19:28:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* NEWS: Add a marker line which I forgot to do for 0.9.6.

Thu May  6 14:18:17 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* README: Minor updates

	* VERSION: Now 0.9.6

Thu Apr  8 09:35:53 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_CHECK_RDYNAMIC): Fix for
					       amiga-openbsd (Peter Reich)
	(GNUPG_PROG_NM): Ditto

Wed Apr  7 20:51:39 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* Makefile.am (g10defs.h): Removed.
	* configure.in (AC_OUTPUT_COMMANDS): Create g10defs.h

Sat Mar 20 12:55:33 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* VERSION: Now 0.9.5

Sun Mar 14 19:34:36 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (AM_SYS_SYMBOL_UNDERSCORE): Removed because it is
	now in the latest libtool.

Thu Mar 11 16:39:46 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: Removed the need for libtool

Mon Mar  8 20:47:17 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (DLSYM_NEEDS_UNDERSCORE): Replaced.
	* acinclude.in (AM_SYS_SYMBOL_UNDERSCORE): New.

	* VERSION: Now 0.9.4
